--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Site used to demonstrate some of my front-end skills",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "mix watch"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,12 @@
   "dependencies": {
     "jquery": "^3.6.0",
     "motion-ui": "^2.0.3"
+  },
+  "devDependencies": {
+    "laravel-mix": "^6.0.49",
+    "sass": "^1.72.0",
+    "sass-loader": "^12.6.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
