--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/thenotsomiserable/rosie-cv.github.io#readme",
   "dependencies": {
     "jquery": "^3.6.0",
-    "motion-ui": "^2.0.3"
+    "motion-ui": "^2.0.3",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "laravel-mix": "^6.0.49",
